--- a/page16.html
+++ b/page16.html
@@ -42,7 +42,7 @@
                         <img src="assets/images/logo-educ.png" alt="Mobirise Website Builder" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">TLE ITR&nbsp;</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="https://mobiri.se">College of Education</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -53,8 +53,8 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">HOME</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">TLE</a><div class="dropdown-menu" aria-labelledby="dropdown-474"><a class="text-black dropdown-item text-primary display-4" href="CHS.html">COMPUTER HARDWARE SERVICING</a><a class="text-black show dropdown-item text-primary display-4" href="crop_productiom.html">CROP PRODUCTION</a><a class="text-black show dropdown-item text-primary display-4" href="Drafting.html">DRAFTING TECHNOLOGY</a><a class="text-black dropdown-item text-primary display-4" href="food.html">FOOD TECHNOLOGY</a><a class="text-black show dropdown-item text-primary display-4" href="gfd.html">GARMENT FASHION DESIGN</a><a class="text-black dropdown-item text-primary display-4" href="he.html">HOME ECONOMICS</a><a class="text-black show dropdown-item text-primary display-4" href="illustration.html">ILLUSTRATION&nbsp;</a><a class="text-black show dropdown-item text-primary display-4" href="shs.html">SENIOR HIGH SCHOOL</a></div></li></ul>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html">HOME</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">TLE</a><div class="dropdown-menu" aria-labelledby="dropdown-474"><a class="dropdown-item text-primary display-4" href="CHS.html">COMPUTER HARDWARE SERVICING</a><a class="show dropdown-item text-primary display-4" href="crop_productiom.html">CROP PRODUCTION</a><a class="show dropdown-item text-primary display-4" href="Drafting.html">DRAFTING TECHNOLOGY</a><a class="dropdown-item text-primary display-4" href="food.html">FOOD TECHNOLOGY</a><a class="show dropdown-item text-primary display-4" href="gfd.html">GARMENT FASHION DESIGN</a><a class="dropdown-item text-primary display-4" href="he.html">HOME ECONOMICS</a><a class="show dropdown-item text-primary display-4" href="illustration.html">ILLUSTRATION&nbsp;</a><a class="show dropdown-item text-primary display-4" href="shs.html">SENIOR HIGH SCHOOL</a></div></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://wordwall.net/account/login" target="_blank">Sign - in</a></div>
             </div>
@@ -164,7 +164,7 @@
         </div>
     </div>
     
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2919377" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with &#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise.com </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
