--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="col-md-12 col-lg-9">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Interactive Teaching Resources for
 </strong><div><strong>Technology and Livelihood Education&nbsp;</strong></div></h1>
-                <p class="mbr-text mbr-fonts-style display-7">Interactive Teaching Resources (ITR) for the Technology Livelihood Education (TLE) subject in the Junior High School (JHS) <br>of K-12 Program using Wordwall Application (App).</p>
+                <p class="mbr-text mbr-fonts-style display-7">I<strong>nteractive Teaching Resources (ITR) for the Technology Livelihood Education (TLE) <br>subject in the K-12 Program using Wordwall Application (App)</strong></p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="All TLE.html">Explore &gt;</a></div>
                 
             </div>
@@ -90,8 +90,7 @@
         <div class="row align-items-center justify-content-center">
             <div class="text-content col-12 col-md-6">
                 <h2 class="mbr-section-title mbr-fonts-style display-7"><strong>TLE ITR</strong></h2>
-                <p class="mbr-text mbr-fonts-style display-4">© Copyright 2022 TLE ITR. <br>All Rights Reserved.
-<br>Disclaimer: Questions used in the assessments were based on the contents from the DepEd Modules.<br><br></p>
+                <p class="mbr-text mbr-fonts-style display-4">Disclaimer: Questions used in the assessments were developed by select BTLED and BTVTED students of College of Education of Bulacan State University based on the contents from the DepEd Modules.<br><br></p>
             </div>
             <div class="icons d-flex align-items-center col-12 col-md-6 justify-content-end mt-md-0 mt-2 flex-wrap">
                 <a href="https://www.bulsu.edu.ph/academics/colleges.php?college_id=COED" target="_blank">
@@ -156,7 +155,7 @@ officeofthepresident@bulsu.edu.ph</p>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page was <a href="https://mobirise.site/g" style="color:#aaa;">made</a> with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise - <a href="https://mobirise.site/m" style="color:#aaa;">More</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
